Bug 1173631 - [EME] Implement async shutdown in clearkey GMP. r=cpearce