dom/media/gmp/GMPChild.cpp
@@ -587,6 +587,7 @@ GMPChild::ShutdownComplete()
 {
   LOGD("%s", __FUNCTION__);
   MOZ_ASSERT(mGMPMessageLoop == MessageLoop::current());
+  mAsyncShutdown = nullptr;
   SendAsyncShutdownComplete();
 }
 
